tests/ui/ast_term_from_binary_operation.stderr
error[E0382]: use of moved value: `op`
  --> tests/ui/ast_term_from_binary_operation.rs:13:10
   |
11 |     let op = ast::binary_operation(&loc, xor, term1, term2).unwrap();
   |         -- move occurs because `op` has type `clingo::ast::BinaryOperation<'_>`, which does not implement the `Copy` trait
12 |     let term3: ast::Term = op.into();
   |                               ------ `op` moved due to this method call
13 |     drop(op);
   |          ^^ value used here after move
   |
note: `into` takes ownership of the receiver `self`, which moves `op`
  --> $RUST/core/src/convert/mod.rs
   |
   |     fn into(self) -> T;
   |             ^^^^
help: you can `clone` the value and consume it, but this might not be your desired behavior
   |
12 |     let term3: ast::Term = op.clone().into();
   |                               ++++++++
